# mindstorm

./: .gitignore  .zenodo.json  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
mindstorm/: prsa.py  subj.py
scripts/: apply_clustsim_svc.sh  lsvol  remove_short_runs.py  run_freesurfer.sh  smooth_susan  transform_func2mni.sh  transform_mni2func.sh  zstat_randomise.sh
src/mindstorm/: dsmplot.py  glm.py  prsa.py  statplot.py  subjutil.py
