[tool.poetry]
name = "mindstorm"
version = "0.2.0"
description = "Advanced analysis of neuroimaging data"
authors = ["Neal Morton <mortonne@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
scipy = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
