[metadata]
name = mindstorm
version = 0.5.1
url = https://github.com/mortonne/mindstorm
author = Neal Morton
author_email = mortonne@gmail.com
description = Mindstorm: Advanced analysis of neuroimaging data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fMRI, neuroimaging, RSA
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    scipy
    pandas
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
